ASC Prod BAckup/ASC Prod/force-app/main/default/objects/B2B_Custom_Search_Filter__c/B2B_Custom_Search_Filter__c.object-meta.xml
<CustomObject>
    <description>This is used to store filter logic for ascensus commerce store.</description>
    <label>B2B Custom Search Filter</label>
    <nameField>
        <displayFormat>BCSFN-{0000}</displayFormat>
        <label>B2B Custom Search Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Custom Search Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>