ASC Prod BAckup/ASC Prod/force-app/main/default/objects/B2B_Custom_Search_Filter__c/fields/Exact_Match__c.field-meta.xml
<CustomField>
    <fullName>Exact_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked, if you want to configure this as exact match filter</inlineHelpText>
    <label>Exact Match</label>
    <type>Checkbox</type>
</CustomField>