ASC Prod BAckup/ASC Prod/force-app/main/default/objects/B2B_Custom_Search_Filter__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <inlineHelpText>Please enter API name of product2 field</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>