ASC Prod BAckup/ASC Prod/force-app/main/default/objects/B2B_Custom_Search_Filter__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <inlineHelpText>Multiples of 10 is recommended</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>